--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,15 +1,12 @@
 <div class="bg-theme" id="sidebar-wrapper">
   <div class="sidebar-heading pb-0">
-    <a href="/"
-      ><img src="/img/logo-white.png" alt="" class="sidebar-logo"
-    /></a>
+    <a href="/">
+      <img src="/img/logo-white.png" alt="" class="sidebar-logo img-fluid" />
+      <!-- <h1 class="text-white">Brand</h1> -->
+    </a>
   </div>
   <hr />
   <div class="list-group list-group-flush">
-    <a
-      class="list-group-item list-group-item-action text-white bg-theme"
-      href="/users"
-      ><i class="fas fa-users mr-2"></i> Users</a
-    >
+    <a class="list-group-item list-group-item-action text-white bg-theme" href="/users"><i class="fas fa-users mr-2"></i> Users</a>
   </div>
 </div>
